acvm-repo/msgpack_tagged/tests/compile_fail/variant_level_via.stderr
error: expected `reserved(...)` or `allow_unknown_tags` inside `#[tagged(...)]` on an enum variant тАФ `default_on_reserved`, `default_on_unknown`, and `via(...)` are type-level modifiers, not variant-level
  --> tests/compile_fail/variant_level_via.rs:16:14
   |
16 |     #[tagged(via(WireDto))]
   |              ^^^^^^^^^^^^
